exercise-4.9/overlays/staging/broadcaster-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: broadcaster
spec:
  template:
    spec:
      containers:
      - name: broadcaster
