exercise-4.9/overlays/staging/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project
spec:
  replicas: 1
  template:
    spec:
      containers:
      - name: frontend
